--- a/Grocery_Shop_1.css
+++ b/Grocery_Shop_1.css
@@ -11,7 +11,7 @@
   width:24%;
   height:100%;
   text-align: center;
-  border:1px solid red;
+  //border:1px solid red;
   display:inline-block;
 }
 
@@ -19,7 +19,7 @@
   width:24%;
   height:100%;
   text-align:center;
-  border:1px solid red;
+  //border:1px solid red;
   display: inline-block;
 }
 
@@ -27,7 +27,7 @@
   width:25%;
   height:100%;
   text-align:center;
-  border:1px solid red;
+  //border:1px solid red;
   display: inline-block;
 }
 
@@ -35,7 +35,7 @@
   width:25%;
   height:100%;
   text-align:center;
-  border:1px solid red;
+  //border:1px solid red;
   display:inline-block;
 }
 
@@ -43,20 +43,52 @@
   line-height:5px;
 }
 
+.images3{
+  height:200px;
+  //border:1px solid red;
+}
+
 .image1{
-  display:inline-block;
-  heighy:200px;
-  width:32%;
+  //display:inline-block;
+  float:left;
+  //border:1px solid red;
+  width:16.5%;
+  box-sizing: border-box;
 }
 
 .image2{
-  display:inline-block;
-  height:200px;
-  width:32%;
+  //display:inline-block;
+  float:left;
+  //border:1px solid red;
+  width:16.5%;
+  box-sizing: border-box;
 }
 
 .image3{
-  display: inline-block;
-  height:200px;
-  width:32%;
+  //display: inline-block;
+  float:right;
+  //border:1px solid red;
+  width:16.5%;
+  box-sizing: border-box;
+}
+
+.space1{
+  width:16.5%;
+  float:left;
+  height:195px;
+  //border:1px solid red;
+}
+
+.space2{
+  width:16.5%;
+  float:left;
+  height:195px;
+  //border:1px solid red;
+}
+
+.space3{
+  width:16.5%;
+  float:left;
+  height:195px;
+  //border:1px solid red;
 }
